option('docs', type: 'boolean', value: false)
option('profiling', type: 'boolean', value: false)
option('extensions', type: 'boolean', value: true)
option('packagekit', type: 'boolean', value: true)
option('selinux', type: 'boolean', value: false)
option('tests', type: 'combo', choices: ['none', 'headless', 'all'], value: 'headless')
option('profile', type : 'string', value : '', description : 'Profile to be used as app id')