NULL=

SUBDIRS = 					\
	adapter                                 \
	hardware 				\
	history 				\
	loser 					\
	music					\
	notes 					\
	sample 					\
	text 					\
	throbber 				\
	tree 					\
	emblem					\
	$(NULL)


#	news					\
# Disable the news-sidebar for now, It has lots of bugs and doesn't
# really fit into a file manager.
