NULL=

SUBDIRS = 					\
	adapter                                 \
	history 				\
	notes 					\
	text 					\
	throbber 				\
	tree 					\
	emblem					\
	image_properties			\
	$(NULL)

#	loser 					\
#	sample 					\
#	These should only be built by people that know what they do

#	news					\
# Disable the news-sidebar for now, It has lots of bugs and doesn't
# really fit into a file manager.
